--- a/src/app/dashboard/tile-data-plugs/tile-data-plugs.component.scss
+++ b/src/app/dashboard/tile-data-plugs/tile-data-plugs.component.scss
@@ -17,12 +17,40 @@
 
   h1, h2, h3, h4, h5, h6 {
     margin-top: 0;
+    margin-bottom: 0.25em;
     padding-top: 0;
+    font-size: 1.3em;
+  }
+
+  p {
+    font-size: 0.8em;
   }
 }
 
-.col-xs-2, .col-xs-10 {
+.col-xs-2, .col-xs-8 {
   margin: 0;
   padding-left: 0.5em;
   padding-right: 0.5em;
+
+  a {
+    color: #ffffff;
+    text-decoration: none;
+
+    span {
+      font-size: 1.5em;
+    }
+  }
 }
+
+.vertical-align {
+  display: flex;
+  flex-direction: row;
+}
+
+.vertical-align > .col-xs-2 {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+
