Adds positioning changes to the login screen

--- a/src/app/user-mgmt/login/login.component.scss
+++ b/src/app/user-mgmt/login/login.component.scss
@@ -110,7 +110,7 @@ text-decoration: underline;
 
 .form-context2 {
   color: #ffffff;
-  font-size: 1em;
+  font-size: 1.2em;
   font-family: 'Open Sans', sans-serif;
-  margin-top: 1em;
+  margin-bottom: 1em;
 }
